<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/view_1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,360:53"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/view_signIn_logo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_login_logo"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_1"
                    app:layout_constraintWidth_percent="0.33" />

                <View
                    android:id="@+id/view_2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,360:64"
                    app:layout_constraintTop_toBottomOf="@id/view_signIn_logo" />

                <EditText
                    android:id="@+id/et_signIn_enter_id"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/sign_in_id_box"
                    android:fontFamily="@font/notosans_kr_regular"
                    android:hint="@string/sign_in_hint_enter_id"
                    android:lineHeight="17dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#000000"
                    android:textColorHint="#696969"
                    android:textSize="12dp"
                    app:layout_constraintDimensionRatio="H,320:40"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_2"
                    app:layout_constraintWidth_percent="0.88" />

                <View
                    android:id="@+id/view_3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,360:10"
                    app:layout_constraintTop_toBottomOf="@id/et_signIn_enter_id" />

                <EditText
                    android:id="@+id/et_signIn_enter_password"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/sign_in_id_box"
                    android:fontFamily="@font/notosans_kr_regular"
                    android:hint="@string/sign_in_hint_enter_password"
                    android:lineHeight="17dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#000000"
                    android:textColorHint="#696969"
                    android:textSize="12dp"
                    app:layout_constraintDimensionRatio="H,320:40"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_3"
                    app:layout_constraintWidth_percent="0.88" />

                <View
                    android:id="@+id/view_4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,360:20"
                    app:layout_constraintTop_toBottomOf="@id/et_signIn_enter_password" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/sign_in_login"
                    android:fontFamily="@font/notosans_kr_bold"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/sign_in"
                    android:textColor="#ffffff"
                    android:textSize="14dp"
                    app:layout_constraintDimensionRatio="H,360:40"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_4"
                    app:layout_constraintWidth_percent="0.88" />

                <View
                    android:id="@+id/view_5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,360:20"
                    app:layout_constraintTop_toBottomOf="@id/tv_login" />

                <TextView
                    android:includeFontPadding="false"
                    android:id="@+id/tv_simple_login_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosans_kr_bold"
                    android:text="@string/sign_in_with_sns"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_5"
                    app:layout_constraintWidth_percent="0.85" />

                <View
                    android:id="@+id/view_6"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,360:15"
                    app:layout_constraintTop_toBottomOf="@id/tv_simple_login_text" />

                <TextView
                    android:id="@+id/tv_login_kakao"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/sign_in_login_kakao"
                    android:fontFamily="@font/notosans_kr_bold"
                    android:gravity="center_vertical|center_horizontal"
                    android:includeFontPadding="false"
                    android:text="@string/sign_in_kakao"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    app:layout_constraintDimensionRatio="H,320:40"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_6"
                    app:layout_constraintWidth_percent="0.88" />

                <View
                    android:id="@+id/view_7"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,360:10"
                    app:layout_constraintTop_toBottomOf="@id/tv_login_kakao" />

                <TextView
                    android:id="@+id/tv_login_naver"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/sign_in_login_naver"
                    android:clickable="false"
                    android:fontFamily="@font/notosans_kr_bold"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/sign_in_naver"
                    android:textColor="#ffffff"
                    android:textSize="14dp"
                    app:layout_constraintDimensionRatio="H,320:40"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_7"
                    app:layout_constraintWidth_percent="0.88" />

                <View
                    android:id="@+id/view_8"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,360:10"
                    app:layout_constraintTop_toBottomOf="@id/tv_login_naver" />

                <TextView
                    android:id="@+id/tv_login_google"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/sign_in_login_google"
                    android:clickable="false"
                    android:fontFamily="@font/notosans_kr_bold"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/sign_in_google"
                    android:textColor="#ffffff"
                    android:textSize="14dp"
                    app:layout_constraintDimensionRatio="H,320:40"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_8"
                    app:layout_constraintWidth_percent="0.88" />

                <View
                    android:id="@+id/view_9"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,360:10"
                    app:layout_constraintTop_toBottomOf="@id/tv_login_google" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_login_first"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_9"
                    app:layout_constraintWidth_percent="0.88">

                    <TextView
                        android:id="@+id/tv_isfirst_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:fontFamily="@font/notosans_kr_regular"
                        android:includeFontPadding="false"
                        android:text="@string/sign_in_first_with_peace"
                        android:textColor="#000000"
                        android:textSize="10dp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_isfirst_2"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/tv_isfirst_2"
                        app:layout_constraintTop_toTopOf="@id/tv_isfirst_2" />

                    <TextView
                        android:id="@+id/tv_isfirst_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosans_kr_medium"
                        android:includeFontPadding="false"
                        android:text="@string/sign_in_sign_up"
                        android:textColor="#000000"
                        android:textSize="10dp"
                        app:layout_constraintLeft_toRightOf="@id/tv_isfirst_1"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />



                </androidx.constraintlayout.widget.ConstraintLayout>
                <View
                    app:layout_constraintDimensionRatio="H,360:15"
                    app:layout_constraintTop_toBottomOf="@id/cl_login_first"
                    android:id="@+id/view_10"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>
                <View
                    android:background="#696969"
                    app:layout_constraintWidth_percent="0.88"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_10"
                    android:id="@+id/view_11"
                    android:layout_width="0dp"
                    android:layout_height="1dp"/>

                <View
                    app:layout_constraintDimensionRatio="H,360:10"
                    app:layout_constraintTop_toBottomOf="@id/view_11"
                    android:id="@+id/view_12"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>

                <TextView
                    android:id="@+id/tv_login_admin"
                    android:fontFamily="@font/notosans_kr_bold"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/sign_in_with_admin"
                    app:layout_constraintDimensionRatio="H,320:40"
                    app:layout_constraintWidth_percent="0.88"
                    android:background="@drawable/sign_in_id_box"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_12"
                    android:layout_width="0dp"
                    android:layout_height="0dp"/>

                <View
                    app:layout_constraintDimensionRatio="H,360:18"
                    app:layout_constraintTop_toBottomOf="@id/tv_login_admin"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>